[workspace]

resolver = "2"

members = ["./app", "./app/input_mapping/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["mertwole"]

[workspace.dependencies]
api-proc-macro = { path = "./app/api_proc_macro" }
input-mapping-derive = { path = "./app/input_mapping/derive" }
input-mapping-common = { path = "./app/input_mapping/common" }

alloy = { version = "0.4.2", features = ["full"] }
async-trait = "0.1.83"
bigdecimal = "0.4.5"
binance_spot_connector_rust = "1.1.0"
bs58 = "0.5.1"
chrono = "0.4.38"
copypasta = "0.10.1"
futures = "0.3.30"
itertools = "0.13.0"
ledger_bitcoin_client = "0.4.1"
ledger-lib = "0.1.0"
ledger-proto = "0.1.0"
log = "0.4.22"
paste = "1.0.15"
pretty_env_logger = "0.5.0"
proc-macro2 = "1.0.86"
qrcode = "0.14.1"
quote = "1.0.36"
ratatui = "0.27.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
serde = "1.0.204"
serde_json = "1.0.120"
strum = "0.26.3"
syn = "2.0.72"
tokio = "1.38.0"
tui-widget-list = "0.10.0"
