[workspace]

resolver = "2"

members = ["./app", "./app/input_mapping/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["mertwole"]

[workspace.dependencies]
api-proc-macro = { path = "./app/api_proc_macro" }
input-mapping-derive = { path = "./app/input_mapping/derive" }
input-mapping-common = { path = "./app/input_mapping/common" }

alloy = "0.4.2"
async-trait = "0.1.83"
bigdecimal = "0.4.5"
binance_spot_connector_rust = "1.1.0"
bitcoin = "0.30.2"
bitcoincore-rpc-json = "0.19.0"
bs58 = "0.5.1"
chrono = "0.4.38"
copypasta = "0.10.1"
futures = "0.3.30"
itertools = "0.13.0"
jsonrpsee = "0.24.7"
ledger-apdu = "0.11.0"
ledger-transport = "0.11.0"
ledger-transport-hid = "0.11.0"
log = "0.4.22"
paste = "1.0.15"
pretty_env_logger = "0.5.0"
proc-macro2 = "1.0.86"
qrcode = "0.14.1"
quote = "1.0.36"
ratatui = "0.29.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
serde = "1.0.204"
serde_json = "1.0.120"
strum = "0.26.3"
syn = "2.0.72"
tokio = "1.38.0"
toml = "0.8.19"
tui-tree-widget = "0.23.0"
