[package]
name = "ledger-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
api-proc-macro.workspace = true
input-mapping-derive.workspace = true
input-mapping-common.workspace = true

alloy = { workspace = true, features = ["full"] }
async-trait.workspace = true
binance_spot_connector_rust.workspace = true
bigdecimal.workspace = true
bitcoincore-rpc-json.workspace = true
bs58.workspace = true
chrono = { workspace = true, features = ["serde"] }
copypasta.workspace = true
futures.workspace = true
itertools.workspace = true
jsonrpsee = { workspace = true, features = ["client"] }
ledger_bitcoin_client.workspace = true
ledger-lib.workspace = true
ledger-proto.workspace = true
log.workspace = true
paste.workspace = true
pretty_env_logger.workspace = true
qrcode.workspace = true
ratatui.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
toml.workspace = true
tui-widget-list.workspace = true
